fix ugly look on mobile when workspace title is long in boards page

--- a/static/base.css
+++ b/static/base.css
@@ -12,6 +12,10 @@
   min-width: 350px;
 }
 
+.workspace-title {
+  font-size: clamp(25px, calc(100% + 0.5vw), 35px);
+}
+
 .message-wrapper {
   min-width: 320px;
   max-width: 700px;
